--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
-    "react": "^0.14.0-beta3",
-    "react-dom": "^0.14.0-beta3",
-    "react-redux": "^0.2.2",
-    "redux": "^1.0.0-rc"
+    "react": "^0.14.0-rc1",
+    "react-dom": "^0.14.0-rc1",
+    "react-redux": "^3.0.0-alpha",
+    "redux": "^3.0.0"
   },
   "devDependencies": {
     "babel": "^5.8.3",
